--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#00A6D0</color>
+    <color name="colorPrimaryIntermediate">#007995</color>
+    <color name="colorPrimaryDark">#005F75</color>
+    <color name="colorAccent">#FF1E00</color>
+    <color name="red">#FF0000</color>
+    <color name="transparent">#00000000</color>
 </resources>
