--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@drawable/menu_logo"
+        android:src="@drawable/pixnfit_logo"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
