Ajout de la couleur "white"

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorAccent">#FF1E00</color>
     <color name="red">#FF0000</color>
     <color name="transparent">#00000000</color>
+    <color name="white">#FFF</color>
 </resources>
