Modification de l'id du tag de postImageView_tagImageId vers tagImageUrl
On utilise une chaine de caractère comme identifiant, plutot que
l'identifiant de l'image

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item name="postImageView_tagImageId" type="id" />
+    <item name="tagImageUrl" type="id" />
 </resources>
