--- a/app/src/main/res/layout/bottom_bar.xml
+++ b/app/src/main/res/layout/bottom_bar.xml
@@ -27,7 +27,8 @@
     <View
         android:layout_width="wrap_content"
         android:layout_height="64dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:background="@color/background_floating_material_light"/>
 
     <ImageButton
         android:layout_width="wrap_content"
