--- a/app/src/main/res/layout/item_header_post.xml
+++ b/app/src/main/res/layout/item_header_post.xml
@@ -45,9 +45,9 @@
             android:layout_alignBottom="@id/postImageView"
             android:layout_alignParentLeft="true"
             android:layout_margin="@dimen/fab_margin"
-            android:src="@drawable/heart_full"
+            android:src="@drawable/heart_white"
             android:tint="@color/white"
-            app:backgroundTint="@color/red" />
+            app:backgroundTint="@color/black" />
     </RelativeLayout>
 
     <LinearLayout
