--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -98,20 +98,15 @@
             android:background="@drawable/button_login"
             android:text="@string/login" />
 
-        <!--<Button-->
-            <!--android:id="@+id/recoverPasswordButton"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_below="@id/loginButton"-->
-            <!--android:layout_centerHorizontal="true"-->
-            <!--android:width="300dp"-->
-            <!--android:background="@color/transparent"-->
-            <!--android:shadowColor="@color/transparent"-->
-            <!--android:shadowDx="0"-->
-            <!--android:shadowDy="0"-->
-            <!--android:text="Recover your password"-->
-            <!--android:textAllCaps="false"-->
-            <!--android:textSize="12dp" />-->
+        <ProgressBar
+            android:id="@+id/loginProgressBar"
+            style="?android:attr/progressBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/loginButton"
+            android:layout_centerHorizontal="true"
+            android:indeterminate="true"
+            android:visibility="invisible"/>
     </RelativeLayout>
 
     <LinearLayout
