Modification de la couleur de highlight

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#00A6D0</color>
     <color name="colorPrimaryIntermediate">#007995</color>
     <color name="colorPrimaryDark">#005F75</color>
-    <color name="colorAccent">#FF1E00</color>
+    <color name="colorAccent">#00A6D0</color>
     <color name="red">#FF0000</color>
     <color name="transparent">#00000000</color>
     <color name="white">#FFF</color>
