--- a/app/src/main/res/layout/content_post.xml
+++ b/app/src/main/res/layout/content_post.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.pixnfit.HomeActivity"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="com.pixnfit.PostActivity"
     tools:showIn="@layout/activity_post">
 
     <android.support.v4.view.ViewPager
@@ -11,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/bottom_bar"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"/>
 
     <include
         android:id="@+id/bottom_bar"
