--- a/app/src/main/res/layout/fragment_profile_about.xml
+++ b/app/src/main/res/layout/fragment_profile_about.xml
@@ -22,6 +22,7 @@
             android:id="@+id/profileAboutDescriptionTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="2dp"
             android:text="@string/lorem" />
     </LinearLayout>
 
@@ -43,6 +44,7 @@
             android:id="@+id/profileAboutCountryTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="2dp"
             android:text="USA" />
     </LinearLayout>
 
@@ -64,6 +66,7 @@
             android:id="@+id/profileAboutStylesTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="2dp"
             android:text="Punk, Rock, Grunge" />
     </LinearLayout>
 </LinearLayout>
