Ajout d'un écran de chargement sur la page d'accueil

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -23,4 +23,6 @@
 
     <include layout="@layout/content_home" />
 
+    <include layout="@layout/template_please_wait" />
+
 </android.support.design.widget.CoordinatorLayout>
