--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.pixnfit.HomeActivity"
+    android:id="@+id/homeLayout"
     tools:showIn="@layout/activity_home">
 
     <TextView
