--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -33,7 +33,7 @@
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:hint="Login" />
+                android:hint="Email" />
         </LinearLayout>
 
         <LinearLayout
@@ -51,40 +51,45 @@
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:hint="Password"
-                android:password="true" />
+                android:inputType="textPassword" />
         </LinearLayout>
 
-
-        <Button
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/layoutButtons"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/passwordBlock"
             android:layout_centerHorizontal="true"
-            android:layout_margin="10dp"
-            android:width="300dp"
-            android:background="@drawable/button_login"
-            android:text="@string/login" />
+            android:weightSum="2">
 
-        <Button
-            android:id="@+id/loginButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/passwordBlock"
-            android:layout_centerHorizontal="true"
-            android:layout_margin="10dp"
-            android:width="300dp"
-            android:background="@drawable/button_login"
-            android:text="@string/login" />
+            <Button
+                android:id="@+id/createAccountButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/button_login"
+                android:text="@string/createAccount" />
+
+            <Button
+                android:id="@+id/loginButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/button_login"
+                android:text="@string/login" />
+        </LinearLayout>
 
         <ProgressBar
             android:id="@+id/loginProgressBar"
             style="?android:attr/progressBarStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/loginButton"
+            android:layout_below="@+id/layoutButtons"
             android:layout_centerHorizontal="true"
             android:indeterminate="true"
-            android:visibility="invisible"/>
+            android:visibility="invisible" />
     </RelativeLayout>
 
 </LinearLayout>
