Ajout de l'ensemble des pages du wizard de création de compte

--- a/app/src/main/res/layout/fragment_wizardpage_user_account_2_sex_birthdate.xml
+++ b/app/src/main/res/layout/fragment_wizardpage_user_account_2_sex_birthdate.xml
@@ -22,7 +22,7 @@
             android:text="@string/label_genre" />
 
         <RadioGroup
-            android:id="@+id/genreRadioGroup"
+            android:id="@+id/genderRadioGroup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -35,14 +35,14 @@
             <!--android:weightSum="2">-->
 
             <RadioButton
-                android:id="@+id/genreMaleRadioButton"
+                android:id="@+id/genderMaleRadioButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Male" />
 
             <RadioButton
-                android:id="@+id/genreFemaleRadioButton"
+                android:id="@+id/genderFemaleRadioButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
